# MastersThesis

./: README.md  anaysis.ipynb  coreset.py  create_dataset.py  csv_loader.py  data_analysis_script.py  data_summary.json  dataset.py  datasets.ipynb  evaluate.py  fair_kmedian.py  kmedian.py  pyproject.toml  requirements.txt  runner.py
algorithms/: _fair_essential_kmedian.py  bera_fair_clustering.py  boehm_fair_clustering.py  fair_essensial_kmedian.py  main_backurs_fair_clustering.py  main_bera_fair_clustering.py  main_bercea_fair_clustering.py  main_boehm_fair_clustering.py  main_fair_essential_kmedian.py  scalable_fair_clustering.py
data-analysis/: data_analysis_report.md  data_analysis_script.py  data_summary.json
evaluations/: eval3.py  evaluation1-6-7.py  evaluation1-6-7_results.csv  evaluation1.py  evaluation1_bera_summary  evaluation1_bercea_summary  evaluation1_boehm_summary  evaluation2.py  evaluation3.py  evaluation3_results.csv  evaluation4.py  evaluation5.py  evaluation5_results.csv
kmedian_rust/: Cargo.toml
kmedian_rust/src/: lib.rs
results/eval167/: eval167_backurs_summary.json  eval167_bera_summary.json  eval167_bercea_summary.json  eval167_boehm_summary.json  eval7_tables_evaluation.py  evaluation1_table_results.csv  evaluation6_results.csv  evaluation7_results.csv
results/eval2/: eval2.txt  evaluation2_results.csv
results/eval3/: evaluation3_log.txt  evaluation3_results.csv
results/eval5/: evaluation5_results.csv
scripts/: droplet_setup.sh
src/fair_clustering/: benchmark.py  csv_loader.py  results_encoder.py  runner.py
(+125 files in other folders)
